# eit-magnetic-rig

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  flow.json  flow_cred.json  flows.json  flows_cred.json  package.json  package.xml  setup.cfg  setup.py
RigSensorPrediction/: rig_predictor.py
RigSensorPrediction/models/: PosZClassifier.joblib
archived_2025_fancypants/: CMakeLists.txt  package.xml
archived_2025_fancypants/docs/: testing_guide.md
archived_2025_fancypants/docs/tutorials/: CNC_safety_primer.md  movement_control.md
archived_2025_fancypants/msg/: MagneticSensorData.msg
archived_2025_fancypants/nodes/: homing.js
archived_2025_fancypants/scripts/: cnc_controller_node.py
archived_pre2025_code/: README.md  flow_cred.json
archived_pre2025_code/homing/: Cargo.toml
archived_pre2025_code/nodes/: cli.js  (+5 more)
cnc/: cnc_controller_node.py
docs/: cnc_controller_node_api.md  index.md  magnetic_sensor_node_api.md  test_plan.md
gui/: terminal_gui_node.py
homing/: Cargo.toml  LICENSE_MIT
launch/: magnetic_homing.launch.py
magnetic_homing/: cnc_controller_node.py  magnetic_sensor_node.py  setup.py
magnetic_homing_gui/: package.xml  setup.py
magnetic_sensor/: magnetic_sensor_node.py
mapping/: Concatenate CSV files.ipynb  Display data.ipynb  Generate section views PDF.ipynb  Merge and prepare CSV files.ipynb  README.md
nodes/: cli.js  homing.js  magnetic-sensors.html  magnetic-sensors.js  package-lock.json  package.json  parse-status.html  parse-status.js  test-pri.js
simulator/: .gitignore  README.md  cnc-simulator.py  virtual-port.sh
(+24 files in other folders)
